--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <link rel="stylesheet" href="Teachers Day.css">
+  <link rel="stylesheet" href="index.css">
     <meta charset="UTF-8">
     <title>Happy Teachers' Day</title>
 </head>
